fix cropper width and height restrictions

--- a/kahuna/public/stylesheets/main.css
+++ b/kahuna/public/stylesheets/main.css
@@ -1410,6 +1410,7 @@ FIXME: what to do with touch devices
     /*style rules also affect the cropper preview*/
     display: inline-block;
     height: 100%;
+    width: 100%;
 }
 
 .easel__image {
